# data-to-ai-mb

agents/maintenance-scheduler/: .env  README.md  pyproject.toml
agents/maintenance-scheduler/maintenance_scheduler/: config.py
agents/maintenance-scheduler/maintenance_scheduler/tools/: tools.py
infrastructure/terraform/: bigquery-procedure.tf  bigquery-table.tf  variables.tf
infrastructure/terraform/bigquery-routines/: process-images.sql.tftpl
infrastructure/terraform/bigquery-schema/: reports.json
prompts/: describe-image.prompt.yaml
