[project]
name = "maintenance_scheduler"
version = "0.1.0"
description = "Bus stop maintenance scheduler"
authors = [{ name = "Sergei Lilichenko", email = "slilichenko@google.com" }]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pydantic-settings>=2.8.1",
    "tabulate>=0.9.0",
    "cloudpickle>=3.1.1",
    "pylint>=3.3.6",
    "google-cloud-aiplatform[adk,agent_engine]>=1.95.0",
    "google-adk>=1.6.1",
    "tzdata>=2025.2",
    "toolbox-core>=0.3.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.3",
    "flake8-pyproject>=1.2.3",
    "pyink>=24.10.1",
    "google-cloud-aiplatform[evaluation]>=1.88.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-vv -s"
testpaths = ["tests/", "eval/"]
markers = ["unit"]
log_level = "ERROR"
log_cli = false
log_auto_indent = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(asctime)s] %(levelname)s (%(funcName)s) \t [%(pathname)s:%(lineno)d] %(message)s"
filterwarnings = ["ignore::UserWarning"]

[tool.pyink]
line-length = 80
pyink-indentation = 4
pyink-use-majority-quotes = true